# DeepGenerativeSymbolicRegression

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  config.yaml  datasets.py  download_pre_trained_models.py  environment.yml  exp_main.py  install.sh  pyproject.toml  requirements.txt  run_pretrain.py  run_recovery_multi.py  setup.cfg
datasets/: BonusEquations.csv  BonusEquationsDimensionless.csv  FeynmanEquations.csv  FeynmanEquationsDimensionless.csv  feynman_benchmark.csv  process.py  standard_dataset_generator.py
libs/NeuralSymbolicRegressionThatScales/: test.py
libs/NeuralSymbolicRegressionThatScales/jupyter/: fit_func.ipynb  test.py
libs/NeuralSymbolicRegressionThatScales/src/: setup.py
libs/sd3/: .gitignore
libs/sd3/dso/: setup.py
models/: adapted_nesrymres.py  controllers.py  dso_controller.py  encoders.py  transformers.py  transformers2.py
models/dgsr_pre_train/12_covar_koza/: config.json  controller.pt
models/dgsr_pre_train/1_covar_koza/: config.json  controller.pt
models/dgsr_pre_train/2_covar_koza/: config.json  controller.pt
models/dgsr_pre_train/3_covar_koza/: config.json  controller.pt
models/dgsr_pre_train/4_covar_koza/: config.json  controller.pt
models/dgsr_pre_train/5_covar_koza/: config.json  controller.pt
models/dgsr_pre_train/6_covar_koza/: config.json  controller.pt
models/nesymres/: benchmark.py  dclasses.py  utils.py
models/nesymres_pre_train/: README.md
process_results/: process_logs.py
test/: test.py  test_token_mapping.py  unit_test.py
utils/: experimental_utils.py  train.py  train_ce.py
(+64 files in other folders)
